--- a/auth/package.json
+++ b/auth/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node auth_server.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -14,6 +14,7 @@
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "jade": "~1.11.0",
+    "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   }
