--- a/auth/package.json
+++ b/auth/package.json
@@ -13,9 +13,12 @@
     "ejs": "^2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
+    "path": "^0.12.7",
     "serve-favicon": "~2.4.5"
   }
 }
